<resources>
    <string name="app_name">KELFinanzas</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="kel_txt">KEL</string>
    <string name="fk_txt">FINANZAS KEL</string>
    <string name="tx_1">Aprende a manejar tus finanzas</string>
    <string name="tx_2">Inicia sesión o ¡Registrate Ahora!</string>
    <string name="txbtl">Iniciar Sesión</string>
    <string name="sig">Siguiente</string>
    <string name="bg">Ingresa el Balance General de la Cuenta</string>
    <string name="Gastos">Gasto</string>
    <string name="Ingresos">Ingreso</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Fecha">Fecha</string>
    <string name="añadir">Añadir</string>

</resources>