<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingresos">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/activity_toolbar" />


    <Button
        android:id="@+id/btn_gasto2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/teal_700"

        android:text="@string/Gastos"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ingresos2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#39018786"

        android:text="@string/Ingresos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="51dp"
        android:layout_height="32dp"
        android:layout_marginStart="63dp"
        android:contentDescription="@string/Gastos"
        app:layout_constraintEnd_toStartOf="@+id/editTextGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/peso"
        tools:layout_editor_absoluteY="326dp" />

    <EditText
        android:id="@+id/editTextGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textViewDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView18" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria:"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="402dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Descripcion"
        android:textColor="#8A8989"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_add3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/teal_700"

        android:text="@string/añadir"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="590dp" />

    <TextView
        android:id="@+id/txt_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="333dp"
        android:text="@string/Gastos"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>